Finished the object oriented pipeline version of the code. Bugs and issues still exist.

--- a/IfA_Smeargle/ifas_configuration_recipe.ipynb
+++ b/IfA_Smeargle/ifas_configuration_recipe.ipynb
@@ -718,8 +718,8 @@
     "setattr(config_class.ZuluConfig,'SA201907281826',{})\n",
     "\n",
     "config_class.ZuluConfig.SA201907281826['early_frame'] = 3\n",
-    "config_class.ZuluConfig.SA201907281826['ref_frame'] = np.array([17,32], dtype=int)\n",
-    "config_class.ZuluConfig.SA201907281826['sub_avg_frames'] = np.array([(257,272), (513,528), (1025,1040)])#, (2049,2064), (4097,4112)], dtype=int)\n",
+    "config_class.ZuluConfig.SA201907281826['refrence_frame'] = np.array([17,32], dtype=int)\n",
+    "config_class.ZuluConfig.SA201907281826['averaging_frames'] = np.array([(257,272), (513,528), (1025,1040)])#, (2049,2064), (4097,4112)], dtype=int)\n",
     "config_class.ZuluConfig.SA201907281826['frame_exposure'] = 5\n",
     "config_class.ZuluConfig.SA201907281826['early_sigma'] = 5"
    ]
