Fixed a binding bug with the deep copy of IfasDataArray. There  is no overwriting of the deep copy function native to Python yet.

--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -16,6 +16,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import numpy.ma as np_ma\n",
+    "import os\n",
     "import pandas as pd\n",
     "import scipy as sp\n",
     "import scipy.optimize as sp_opt\n",
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -44,9 +45,9 @@
       "╓ BravoConfig Parameters:\n",
       "╟  detector_name ⇀ {'name': 'SAPHIRA-MK20-M12145-03_20190927_T40K'}\n",
       "╟  same_file_size_sanitization_config ⇀ {'method': None}\n",
-      "╟  number_rename_config ⇀ {'begin_garbage': 1, 'archive_data': False}\n",
-      "╟  set_determine_rename_config ⇀ {'set_length': 14, 'begin_garbage': 1, 'archive_data': False}\n",
-      "╟  voltpat_rename_config ⇀ {'voltage_pattern': [2.5, 4.5, 6.5, 8.5, 9.5, 10.5, 11.5, 11.5, 10.5, 9.5, 8.5, 6.5, 4.5, 2.5], 'begin_garbage': 1, 'archive_data': False}\n",
+      "╟  number_rename_config ⇀ {'begin_garbage': 1}\n",
+      "╟  set_determine_rename_config ⇀ {'set_length': 14, 'begin_garbage': 1}\n",
+      "╟  voltpat_rename_config ⇀ {'voltage_pattern': [2.5, 4.5, 6.5, 8.5, 9.5, 10.5, 11.5, 11.5, 10.5, 9.5, 8.5, 6.5, 4.5, 2.5], 'begin_garbage': 1}\n",
       "╟  auto_avg_slicing_config ⇀ {'reference_chunk': None, 'split_chunks': None, 'averaging_function': None}\n",
       "╟  avg_endpoints_config ⇀ {'start_chunk': None, 'end_chunk': None}\n",
       "╟  avg_endpts_persec_config ⇀ {'start_chunk': None, 'end_chunk': None, 'frame_exposure_time': None}\n",
@@ -87,9 +88,9 @@
       "╟  ZuluConfig ↴ \n",
       "< Configuration Class --- ZuluConfig > \n",
       "╓ ZuluConfig Parameters:\n",
-      "╟  SA201907281826 ⇀ {'early_frame': 3, 'ref_frame': array([17, 32]), 'sub_avg_frames': array([[ 257,  272],\n",
+      "╟  SA201907281826 ⇀ {'early_frame': 3, 'refrence_frame': array([17, 32]), 'averaging_frames': array([[ 257,  272],\n",
       "       [ 513,  528],\n",
-      "       [1025, 1040]]), 'frame_exposure': 5, 'early_sigma': 5}\n",
+      "       [1025, 1040]]), 'frame_exposure': 5, 'early_sigma': 5, 'early_bin_size': 10}\n",
       "╙------------------------------------------\n",
       "</ Configuration Class --- ZuluConfig >\n",
       "╟  BaseConfig ↴ \n",
@@ -105,9 +106,6 @@
    "source": [
     "first_run = ifas.yankee.SmeargleConfig('FirstRun.ifaspkl')\n",
     "\n",
-    "first_run.BravoConfig.voltpat_rename_config['archive_data'] = False\n",
-    "first_run.BravoConfig.number_rename_config['archive_data'] = False\n",
-    "first_run.BravoConfig.set_determine_rename_config['archive_data'] = False\n",
     "first_run.BravoConfig.detector_name = {'name': 'SAPHIRA-MK20-M12145-03_20190927_T40K'}\n",
     "\n",
     "if (False):\n",
@@ -134,30 +132,109 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\meta\\io.py:99: DataWarning: This a 3D data frame with nan/null values. Frames with nan/null values have been completely nulled. \n",
+      "File name: ./Data\\SAPHIRA-MK20-M12145-03_20190927_T40K__num;10__set;1__detBias;9.5Vdown.fits    Null frames: [157 205].\n",
+      "  .format(f_name=file_name, fr_list=nan_frames)))\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'hdu_data' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-f3840513f194>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0moutput\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mifas\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzulu\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpipelines\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSA201907281826_reduction_pipeline\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'./Data'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfirst_run\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Desktop\\PROGRAM\\IfA_Smeargle\\zulu\\detector_pipelines\\saphira_pipeline.py\u001b[0m in \u001b[0;36mSA201907281826_reduction_pipeline\u001b[1;34m(data_directory, configuration_class)\u001b[0m\n\u001b[0;32m    153\u001b[0m             \u001b[1;31m# Extracting a copy for analysis. The normal python deepcopy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    154\u001b[0m             \u001b[1;31m# may have a bug that made this unusable.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 155\u001b[1;33m             \u001b[0mdetector_subframe\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdetector_frame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdeepcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    156\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    157\u001b[0m             \u001b[1;31m# Taking the average of the frames provided in the configuration.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Desktop\\PROGRAM\\IfA_Smeargle\\zulu\\zulu_main.py\u001b[0m in \u001b[0;36mdeepcopy\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    637\u001b[0m         \u001b[1;31m# class.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    638\u001b[0m         new_instance = IfasDataArray(pathname=None, configuration_class=None,\n\u001b[1;32m--> 639\u001b[1;33m                                      blank=True, silent=True)\n\u001b[0m\u001b[0;32m    640\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    641\u001b[0m         \u001b[1;31m# Extract the needed data to copy over and do so.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Desktop\\PROGRAM\\IfA_Smeargle\\zulu\\zulu_main.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, pathname, configuration_class, blank, silent)\u001b[0m\n\u001b[0;32m    143\u001b[0m             \u001b[1;32mwith\u001b[0m \u001b[0msmeargle_absolute_silence\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    144\u001b[0m                 _initalization(pathname=pathname, configuration_class=configuration_class,\n\u001b[1;32m--> 145\u001b[1;33m                                blank=blank)\n\u001b[0m\u001b[0;32m    146\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    147\u001b[0m             _initalization(pathname=pathname, configuration_class=configuration_class,\n",
+      "\u001b[1;32m~\\Desktop\\PROGRAM\\IfA_Smeargle\\zulu\\zulu_main.py\u001b[0m in \u001b[0;36m_initalization\u001b[1;34m(pathname, configuration_class, blank)\u001b[0m\n\u001b[0;32m    102\u001b[0m             \u001b[1;31m# raw data values. Ternary operator for the change in\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    103\u001b[0m             \u001b[1;31m# representation of a mask.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 104\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfits_rawdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp_ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetdata\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhdu_data\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    105\u001b[0m             self.fits_datamask = (np_ma.getmask(hdu_data) \n\u001b[0;32m    106\u001b[0m                                   if np_ma.getmask(hdu_data) is not np_ma.nomask else None)\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'hdu_data' referenced before assignment"
+     ]
+    }
+   ],
    "source": [
-    "ifas.zulu.pipelines.SA201907281826_reduction_pipeline('./Data',first_run)"
+    "output = ifas.zulu.pipelines.SA201907281826_reduction_pipeline('./Data',first_run)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'./Data\\\\SAPHIRA-MK20-M12145-03_20190927_T40K__num;10__set;1__detBias;9.5Vdown__slice;17,32-257,272.fits'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "first_run.ZuluConfig.SA201907281826 = {'early_frame': 3, 'ref_frame': np.array([161,192]), 'sub_avg_frames': np.array([[221,228]]), 'frame_exposure': 5, 'early_sigma': 5}\n",
-    "print(first_run)\n",
-    "ifas.zulu.pipelines.SA201907281826_reduction_pipeline('./Data',first_run)"
+    "output['orig'].filepathname\n",
+    "output['sub'].filepathname"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\zulu\\zulu_main.py:83: InputWarning: The data array file is indicated to return a blank one. Doing so as requested.\n",
+      "  smeargle_warning(InputWarning,(\"The data array file is indicated to return a blank \"\n",
+      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\zulu\\zulu_main.py:112: InputWarning: There is no configuration class provided for this array. The attribute will be None. The SmargleConfig class will be the default.\n",
+      "  smeargle_warning(InputWarning,(\"There is no configuration class provided for this \"\n",
+      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\zulu\\zulu_main.py:395: InputWarning: There is no input configuration class. A blank one will be assigned.\n",
+      "  smeargle_warning(InputWarning,(\"There is no input configuration class. A blank one \"\n"
+     ]
+    }
+   ],
    "source": [
-    "data\n",
-    "print(np.nanmean(data.data),np.nanstd(data.data))"
+    "test = ifas.zulu.IfasDataArray(None, blank=True)\n",
+    "print(test.echo_mask_dictionary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['__doc__', 'filename', 'filedirectory', 'fileextension', 'filepathname', 'fits_file', 'fits_header', 'fits_data', 'fits_rawdata', 'fits_datamask', '_raw_configuration_class', '_mutable_header', '_mutable_data', '_mutable_datamask', '_mutable_config', '_mutable_echo_mask', '_mutable_echo_mask_dictionary', '_proper_blank', 'SmeargleConfig'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "object_list = vars(output['orig'])\n",
+    "second_list = copy.deepcopy(object_list)\n",
+    "\n",
+    "for keydex, valuedex in object_list.items():\n",
+    "    if (callable(valuedex)):\n",
+    "        second_list.pop(keydex)\n",
+    "        \n",
+    "print(second_list.keys())"
    ]
   },
   {
@@ -571,98 +648,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\zulu\\zulu_main.py:79: InputWarning: The data array file is indicated to return a blank one. Doing so as requested.\n",
-      "  smeargle_warning(InputWarning,(\"The data array file is indicated to return a blank \"\n",
-      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\zulu\\zulu_main.py:102: InputWarning: There is no configuration class provided for this array. The attribute will be None. The SmargleConfig class will be the default.\n",
-      "  smeargle_warning(InputWarning,(\"There is no configuration class provided for this \"\n",
-      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\zulu\\zulu_main.py:343: InputWarning: There is no input configuration class. A blank one will be assigned.\n",
-      "  smeargle_warning(InputWarning,(\"There is no input configuration class. A blank one \"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test = ifas.zulu.IfasDataArray(None, blank=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['__class__',\n",
-       " '__delattr__',\n",
-       " '__dir__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__le__',\n",
-       " '__lt__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " '_bravo_functionality',\n",
-       " '_echo_functionality',\n",
-       " '_oscar_functionality',\n",
-       " '_yankee_functionality',\n",
-       " '_zulu_determine_configuration_parameters',\n",
-       " 'bravo_filename_split_by_parameter',\n",
-       " 'echo010_fixing_invalids',\n",
-       " 'echo120_subarray_mask',\n",
-       " 'echo170_gaussian_truncation',\n",
-       " 'echo270_minimum_cut',\n",
-       " 'echo271_maximum_cut',\n",
-       " 'echo275_pixel_truncation',\n",
-       " 'echo276_percent_truncation',\n",
-       " 'echo277_sigma_truncation',\n",
-       " 'echo380_single_pixels',\n",
-       " 'echo381_rectangle_mask',\n",
-       " 'echo382_column_mask',\n",
-       " 'echo383_row_mask',\n",
-       " 'echo398_nothing',\n",
-       " 'echo399_everything',\n",
-       " 'echo_create_masked_array',\n",
-       " 'echo_execution',\n",
-       " 'echo_synthesize_mask_dictionary',\n",
-       " 'fast_forward_configuration',\n",
-       " 'get_data',\n",
-       " 'median_endpoints',\n",
-       " 'median_endpoints_per_kilosecond',\n",
-       " 'median_endpoints_per_second',\n",
-       " 'overwrite_configuration',\n",
-       " 'plot_array_heatmap_image',\n",
-       " 'plot_array_histogram',\n",
-       " 'plot_single_heatmap_and_histogram',\n",
-       " 'print_configuration',\n",
-       " 'read_configuration',\n",
-       " 'write_configuration']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "[method_name for method_name in dir(test)\n",
     "                  if callable(getattr(test, method_name))]"
