Fixed the computational bug. The pipeline seems to work for now.

--- a/IfA_Smeargle/ifas_configuration_recipe.ipynb
+++ b/IfA_Smeargle/ifas_configuration_recipe.ipynb
@@ -275,7 +275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ECHO-170 Gaussian Truncation: Pixels outside of the range $\\left \\{ x \\in \\mathbb{R} | \\mu - k\\sigma \\leq x \\leq \\mu + k\\sigma \\right \\}$ are masked. $k$ is provided by ``sigma_multiple``. The mean and standard deviation values are provided by a Gaussian fit on a histogram. The values are binned in bin widths of ``bin_size`` when sent to the histogram prior to fitting."
+    "ECHO-170 Gaussian Truncation: Pixels outside of the range $\\left \\{ x \\in \\mathbb{R} | \\mu - k\\sigma \\leq x \\leq \\mu + k\\sigma \\right \\}$ are masked. $k$ is provided by ``sigma_multiple``. The mean and standard deviation values are provided by a Gaussian fit on a histogram. The values are binned in bin widths of ``bin_width`` when sent to the histogram prior to fitting."
    ]
   },
   {
@@ -287,7 +287,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'run': True, 'sigma_multiple': 5, 'bin_size': 5}\n"
+      "{'run': True, 'sigma_multiple': 5, 'bin_width': 5}\n"
      ]
     }
    ],
@@ -772,7 +772,7 @@
       "╓ EchoConfig Parameters:\n",
       "╟  echo010_config ⇀ {'run': False}\n",
       "╟  echo120_config ⇀ {'run': False, 'x_range': None, 'y_range': None}\n",
-      "╟  echo170_config ⇀ {'run': True, 'sigma_multiple': 5, 'bin_size': 5}\n",
+      "╟  echo170_config ⇀ {'run': True, 'sigma_multiple': 5, 'bin_width': 5}\n",
       "╟  echo270_config ⇀ {'run': False, 'minimum_value': None}\n",
       "╟  echo271_config ⇀ {'run': False, 'maximum_value': None}\n",
       "╟  echo275_config ⇀ {'run': False, 'top_count': None, 'bottom_count': None}\n",
