Added more information on how to build a pipeline.

--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1083,30 +1083,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\zulu\\zulu_main.py:84: InputWarning: The data array file is indicated to return a blank one. Doing so as requested.\n",
+      "  smeargle_warning(InputWarning,(\"The data array file is indicated to return a \"\n",
+      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\zulu\\zulu_main.py:115: InputWarning: There is no configuration class provided for this array. The raw attribute will be None; the mutable attribute will be a default configuration class.\n",
+      "  smeargle_warning(InputWarning,(\"There is no configuration class provided for \"\n",
+      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\zulu\\zulu_main.py:415: InputWarning: There is no input configuration class. A blank one will be assigned.\n",
+      "  smeargle_warning(InputWarning,(\"There is no input configuration class. A blank one \"\n"
+     ]
+    }
+   ],
    "source": [
     "test = ifas.zulu.IfasDataArray(None, blank=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['bravo_filename_split_by_parameter',\n",
+       " 'deepcopy',\n",
+       " 'echo010_fixing_invalids',\n",
+       " 'echo120_subarray_mask',\n",
+       " 'echo170_gaussian_truncation',\n",
+       " 'echo270_minimum_cut',\n",
+       " 'echo271_maximum_cut',\n",
+       " 'echo275_pixel_truncation',\n",
+       " 'echo276_percent_truncation',\n",
+       " 'echo277_sigma_truncation',\n",
+       " 'echo380_single_pixels',\n",
+       " 'echo381_rectangle_mask',\n",
+       " 'echo382_column_mask',\n",
+       " 'echo383_row_mask',\n",
+       " 'echo398_nothing',\n",
+       " 'echo399_everything',\n",
+       " 'echo_create_masked_array',\n",
+       " 'echo_execution',\n",
+       " 'echo_synthesize_mask_dictionary',\n",
+       " 'fast_forward_configuration',\n",
+       " 'median_endpoints',\n",
+       " 'median_endpoints_per_kilosecond',\n",
+       " 'median_endpoints_per_second',\n",
+       " 'overwrite_configuration',\n",
+       " 'plot_array_heatmap_image',\n",
+       " 'plot_array_histogram',\n",
+       " 'plot_single_heatmap_and_histogram',\n",
+       " 'print_configuration',\n",
+       " 'read_configuration',\n",
+       " 'update_pathname',\n",
+       " 'write_configuration',\n",
+       " 'write_fits_file']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "[method_name for method_name in dir(test)\n",
-    "                  if callable(getattr(test, method_name))]"
+    "[method_name for method_name in dir(test) if (callable(getattr(test, method_name)) and (method_name[:1] != '_'))]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\zulu\\zulu_main.py:115: InputWarning: There is no configuration class provided for this array. The raw attribute will be None; the mutable attribute will be a default configuration class.\n",
+      "  smeargle_warning(InputWarning,(\"There is no configuration class provided for \"\n",
+      "C:\\Users\\Tripp\\Desktop\\PROGRAM\\IfA_Smeargle\\zulu\\zulu_main.py:415: InputWarning: There is no input configuration class. A blank one will be assigned.\n",
+      "  smeargle_warning(InputWarning,(\"There is no input configuration class. A blank one \"\n"
+     ]
+    }
+   ],
    "source": [
-    "test = ifas.zulu.IfasDataArray('./Data/191103_001938.fits', blank=False)"
+    "test = ifas.zulu.IfasDataArray('C:/Users/Tripp/Desktop/RawData/MK20-M12145-34_20191116_T40K/191117_070346.fits', blank=False)"
    ]
   },
   {
